Add drop all output fault
